[package]
name = "pana-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.0"
clearscreen = "2.0.1"
console = "0.15.7"
dialoguer = { version = "0.10.4", features = ["history"] }
regex = "1.9.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true